modifica item - springboot

--- a/src/main/resources/templates/dashboard/curatore.html
+++ b/src/main/resources/templates/dashboard/curatore.html
@@ -136,7 +136,7 @@
         </td>
         <td>
             <ul>
-                <li th:each="p : ${pacchetto.prodotti}" th:text="${p}"></li>
+                <li th:each="p : ${pacchetto.prodottiNomi}" th:text="${p}"></li>
             </ul>
         </td>
         <td>
