view + produttore, distributore, trasformatore refactoring - springboot

--- a/src/main/resources/templates/dashboard/distributore.html
+++ b/src/main/resources/templates/dashboard/distributore.html
@@ -28,6 +28,7 @@
 <div th:replace="fragments/modals :: edit-error-modal('pacchetti')"></div>
 <div th:replace="fragments/modals :: social-modal"></div> <!-- modale avviso -->
 <div th:replace="fragments/modals :: social-feed-modal"></div>
+<div th:replace="fragments/modals :: social-post-modals('/distributore/dashboard')"></div>
 
 <hr class="section-separator"/>
 
