--- a/src/main/resources/templates/dashboard/produttore.html
+++ b/src/main/resources/templates/dashboard/produttore.html
@@ -24,6 +24,7 @@
 <div th:replace="fragments/modals :: edit-error-modal('prodotti')"></div>
 <div th:replace="fragments/modals :: social-modal"></div> <!-- avviso Social -->
 <div th:replace="fragments/modals :: social-feed-modal"></div>
+<div th:replace="fragments/modals :: social-post-modals('/produttore/dashboard')"></div>
 
 <hr class="section-separator"/>
 
