--- a/src/main/resources/templates/dashboard/trasformatore.html
+++ b/src/main/resources/templates/dashboard/trasformatore.html
@@ -24,6 +24,7 @@
 <div th:replace="fragments/modals :: edit-error-modal('prodotti trasformati')"></div>
 <div th:replace="fragments/modals :: social-modal"></div> <!-- avviso Social -->
 <div th:replace="fragments/modals :: social-feed-modal"></div>
+<div th:replace="fragments/modals :: social-post-modals('/trasformatore/dashboard')"></div>
 
 <hr class="section-separator"/>
 
