--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -80,6 +80,7 @@
             <option value="CURATORE">Curatore</option>
             <option value="DISTRIBUTORE_TIPICITA">Distributore</option>
             <option value="TRASFORMATORE">Trasformatore</option>
+            <option value="ANIMATORE">Animatore</option>
         </select>
     </div>
 
